# passes

./: README.md
gcc/seedpass/: CMakeLists.txt  README.md  seedpass.cpp
gcc/srandpass/: CMakeLists.txt  README.md  srandpass.cpp
llvm/goodpass/: CMakeLists.txt  README.md  goodpass.cpp
llvm/seedpass/: CMakeLists.txt  README.md  seedpass.cpp
llvm/srandpass/: CMakeLists.txt  readme.md  srandpass.cpp
rnd/: CMakeLists.txt  README.md  rnd.cpp  rnd.cpp.005t.original  rnd.cpp.006t.gimple  rnd.cpp.265t.optimized  rnd.ll  rnd_gcc_instr-rnd.cpp.265t.optimized  rnd_instr.ll  rnd_opt.ll
srand/: README.md  compile.db  srand.cpp  srand.cpp.005t.original  srand.cpp.265t.optimized  srand.ll  srand_gcc_instr-srand.cpp.265t.optimized  srand_instr.ll
